force-app/main/default/objects/Employee__c/fields/Annual_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Date__c</fullName>
    <label>Annual Review Date</label>
    <type>Date</type>
</CustomField>