force-app/main/default/objects/Employee__c/fields/Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Date__c</fullName>
    <formula>DAY( TODAY() ) = 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Date</label>
    <type>Checkbox</type>
</CustomField>