force-app/main/default/objects/Employee__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <formula>CASE( Performance_Flag__c , 
&apos;Yellow&apos;, &apos;#fed426&apos;, 
&apos;Orange&apos;, &apos;#FF6D00&apos;, 
&apos;Red&apos;, &apos;#FF0000&apos;, 
&apos;Green&apos;, &apos;#008000&apos;, 
&apos;#FFFFFF&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Code</label>
    <type>Text</type>
</CustomField>