force-app/main/default/objects/Employee__c/fields/Connected_User__c.field-meta.xml
<CustomField>
    <fullName>Connected_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>