force-app/main/default/objects/Employee__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <description>For Employee Code</description>
    <label>Employee Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>