force-app/main/default/objects/Employee__c/fields/Employee_Official_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Official_Email__c</fullName>
    <description>Employee Official Email</description>
    <label>Employee Official Email</label>
    <type>Email</type>
</CustomField>