force-app/main/default/objects/Employee__c/fields/Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>It will show the balance leave</description>
    <label>Leave Balance</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>