force-app/main/default/objects/Employee__c/fields/Leave_Balance_Formula__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance_Formula__c</fullName>
    <formula>Leave_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>