force-app/main/default/objects/Employee__c/fields/Mid_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Mid_Review_Date__c</fullName>
    <label>Mid Review Date</label>
    <type>Date</type>
</CustomField>