force-app/main/default/objects/Employee__c/fields/Name_in_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_in_Bank_Account__c</fullName>
    <label>Name in Bank Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>