force-app/main/default/objects/Employee__c/fields/orgChartId__c.field-meta.xml
<CustomField>
    <fullName>orgChartId__c</fullName>
    <externalId>true</externalId>
    <label>orgChartId</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>