force-app/main/default/objects/Employee__c/fields/orgChartParentId__c.field-meta.xml
<CustomField>
    <fullName>orgChartParentId__c</fullName>
    <description>org Chart Parent Id</description>
    <label>orgChartParentId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>