force-app/main/default/objects/Employee__c/fields/PAN_Card__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card__c</fullName>
    <description>Employee PAN Card</description>
    <label>PAN Card</label>
    <length>10</length>
    <type>Text</type>
</CustomField>