force-app/main/default/objects/Employee__c/fields/Performance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Performance_Flag__c</fullName>
    <label>Performance Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <default>true</default>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>