force-app/main/default/objects/Employee__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Reporting to</description>
    <label>Reporting Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Reporting Manager</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>