force-app/main/default/objects/Employee__c/fields/Reporting_Manager_Formula__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Formula__c</fullName>
    <formula>Reporting_Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager</label>
    <type>Text</type>
</CustomField>