force-app/main/default/objects/Employee__c/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <description>Employee Spouse Name</description>
    <label>Spouse Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>