force-app/main/default/objects/Employee__c/listViews/All_Employees.listView-meta.xml
<ListView>
    <fullName>All_Employees</fullName>
    <columns>NAME</columns>
    <columns>Employee_Code__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Reporting_Manager__c</columns>
    <columns>Phone__c</columns>
    <columns>Employee_Official_Email__c</columns>
    <columns>Email__c</columns>
    <columns>Joining_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Employees</label>
</ListView>